--- a/__components/header/header.css
+++ b/__components/header/header.css
@@ -112,7 +112,7 @@ cuf-navigation-pane {
     font-size: calc(var(--title-font-size-factor) * var(--fixed-container-height) * 0.6);
   }
   .subtitle {
-    --modified-subtitle-factor: calc(1 + 0.6 * (var(--subtitle-font-size-factor) - 1));
+    --modified-subtitle-factor: calc(1 + 0.5 * (var(--subtitle-font-size-factor) - 1));
     font-size: calc(var(--modified-subtitle-factor) * min(var(--header-height-unit) * 1.05, max(14px, 3.5vw)) * 0.9);
   }
 }
@@ -121,7 +121,7 @@ cuf-navigation-pane {
     font-size: calc(var(--title-font-size-factor) * var(--fixed-container-height) * 0.5);
   }
   .subtitle {
-    --modified-subtitle-factor: calc(1 + 0.2 * (var(--subtitle-font-size-factor) - 1));
+    --modified-subtitle-factor: calc(1 + 0.18 * (var(--subtitle-font-size-factor) - 1));
     font-size: calc(var(--modified-subtitle-factor) * min(var(--header-height-unit) * 1.05, max(14px, 3.5vw)) * 0.9);
   }
 }
